fix overflow issue on artists page

--- a/src/components/App/styles.module.scss
+++ b/src/components/App/styles.module.scss
@@ -43,7 +43,8 @@ body, html {
 main {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  // height: 100vh;
+  min-height: 100vh;
   padding: 0 0;
 }
 
