--- a/src/components/Artists/ArtistInfo/styles.module.scss
+++ b/src/components/Artists/ArtistInfo/styles.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, auto);
-  max-height: inherit;
+  // max-height: inherit;
   overflow-x: hidden;
   margin: 20px 0 20px 20px;
 
