--- a/src/components/Artists/styles.module.scss
+++ b/src/components/Artists/styles.module.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 325px auto;
   grid-template-rows: auto;
-  max-height: calc(100vh - 125px);
+  // max-height: calc(100vh - 125px);
   position: relative;
   flex-grow: 1;
   margin: 0 4.5rem;
