--- a/src/components/Register/styles.module.scss
+++ b/src/components/Register/styles.module.scss
@@ -12,7 +12,7 @@
 
   @media screen and (min-width: $breakpoint-min) {
     text-align: center;
-    padding-top: 3rem;
+    padding: 3rem 0;
     background-color: $black-backgr;
 
     p {
